# agi-gpt-plugin-template

./: README.md  pyproject.toml
src/agi_gpt_plugin_template/: __init__.py
src/alpha_plugin_template/: __init__.py
