[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agi_gpt_plugin_template"
version = "0.1.0"
authors = [
  { name="olariuromeo", email="2572824+olariuromeo@users.noreply.github.com" },
]
description = "The template plugin for agi-gpt."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["abstract-singleton"]

[project.urls]
"Homepage" = "https://github.com/coozila/agi-gpt"
"Bug Tracker" = "https://github.com/coozila/agi-gpt"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = ""

[tool.isort]
profile = "black"

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "88"
